bin_PROGRAMS = cscript
cscript_SOURCES =	main.cpp \
									machine.cpp \
									var.cpp \
									native.cpp \
									lexer.cpp \
									file.cpp \
									codegen.cpp \
									optimize.cpp \
									compile.cpp \
									annotate.cpp \
									decompile.cpp \
									print.cpp \
									cmdargs.cpp \
									ast.cpp \
									validate.cpp \
									scope.cpp \
									parser.cpp

